--- a/src/css/style.css
+++ b/src/css/style.css
@@ -369,3 +369,125 @@ textarea {
 }
 
 
+.restaurants-list {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  background-color: #fff2ff;
+  padding: 1em;
+  grid-gap: 0.9em;
+}
+
+
+.all-restaurants {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+
+.restaurant-info {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  border: solid 2px #eee;
+  border-radius: 5px;
+  padding: 1em;
+  margin-bottom: 5px;
+  background-color: #fff;
+}
+
+.name-address {
+  display: grid;
+  grid-template-columns: 100px 3fr;
+  grid-gap: 10px;
+  border-bottom: solid 1px #ddd;
+  padding: 1em;
+  position: relative;
+}
+
+.details {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-gap: 10px;
+  /*border-bottom: solid 1px #ddd;*/
+  /*padding: 1em;*/
+}
+
+.logo {
+  width: 100px;
+  /*height: 200px;*/
+  border: 1px solid #ddd;
+  border-radius: 2px;
+}
+
+.logo-div {
+  /*border: 1px solid #ddd;*/
+  /*border-radius: 2px;*/
+}
+
+.restaurant-name {
+  font-weight: 700;
+  color: #ab14ab;
+  font-size: 1.5em;
+}
+
+.restaurant-locality {
+  font-weight: 700;
+  font-size: 1em;
+  text-transform: capitalize;
+}
+
+
+.details-title {
+  text-transform: uppercase;
+  font-size: 0.7em;
+}
+
+.restaurant-address {
+  color: #988686;
+  font-size: 0.8em;
+}
+
+.restaurant-rating {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #fbc3fb;
+  padding: 0.6em;
+  border-radius: 3px;
+}
+
+.details-description {
+  text-transform: capitalize;
+  font-size: 0.7em;
+}
+
+
+a {
+  text-decoration: none;
+}
+
+
+/* Filter Restaurant related */
+.filter-restaurants {
+  display: grid;
+  grid-template-columns: 1fr;
+  background-color: #fff;
+  border: solid 1px #ddd;
+  border-radius: 5px;
+}
+
+.filter-info {
+  text-transform: capitalize;
+  padding: 1em;
+}
+
+.filter-name {
+  font-size: 1em;
+}
+
+.item-info {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  padding: 0.4em;
+  font-size: 0.8em;
+  cursor: pointer;
+}
