--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,7 +50,6 @@ html {
 /* title of the application related */
 .title {
   font-weight: 300;
-  /*grid-column: 1/5;*/
   text-transform: uppercase;
 }
 
@@ -58,43 +57,12 @@ html {
   font-weight: 700;
 }
 
-
-/* Login related */
-.login {
-  height: calc(100vh - 70px);
-  display: grid;
-}
-
-.login-title {
-  margin-bottom: 2px;
-
-  color: #ab14ab;
-}
-
-.login-form {
-  border: solid 1px #ddd;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-  justify-self: center;
-  padding: 4em;
-  margin: 2em;
-}
-
-
-input[type=password],
 input[type=text] {
-  /*width: 100%;*/
-
-  padding: 1.3em;
+  padding: 1.9em;
   font-size: 0.7em;
   letter-spacing: 1px;  
 }
 
-input[type=password]:hover,
-input[type=text]:hover,
-input[type=password]:focus,
-input[type=text]:focus {  
-  background-color: #fff;
-}
 
 /* Error message in the Login screen */
 .error-message {
@@ -106,80 +74,6 @@ input[type=text]:focus {
   border-left: solid 2px;
   border-radius: 2px;
 }
-
-/* user logo related */
-.user-info {
-  /*grid-column: 6;*/
-  position: relative;
-  justify-self: end;
-}
-
-.user-icon {
-  border-radius: 50px;
-  width: 30px;
-  height: 30px;
-
-  position: absolute;
-  top: -6px;
-  left: -35px;
-}
-
-.user-greeting {
-  display: block;
-}
-
-/* drop down menu */
-.user-info>.drop-down {
-  display: none;
-}
-
-.user-info:hover>.drop-down {
-  display: block;
-}
-
-.drop-down {
-  padding: 1em;
-  position: absolute;
-}
-
-/* Log out div */
-.logout {
-  font-size: 0.7em;
-  padding: 1em;
-  position: absolute;
-  right: 0;
-  top: 23px;
-  color: #ab14ab;
-  background-color: #f2f2f2;
-  z-index: 1;
-  border-radius: 2px;
-}
-
-.logout-link:hover,
-.logout-link:focus {
-  background-color: #ddd;
-}
-
-.logout::after {
-  content: '';
-  border-right: solid 5px transparent;
-  border-bottom: solid 5px #f2f2f2;
-  border-left: solid 5px transparent;
-  position: absolute;
-  top: -5px;
-  right: 8px;
-  width: 0;
-  height: 0;
-}
-
-.logout-link {
-  text-decoration: none;
-  color: #ab14ab;
-  padding-left: 0.5em;
-  text-align: left;
-  padding-right: 0.5em;
-}
-
 
 /* Hero component related */
 .hero-div {
@@ -207,6 +101,7 @@ input[type=text]:focus {
   display: grid;
   grid-template-columns: 4fr 1fr;
   grid-gap: 1em;
+  position: relative;
 }
 
 .search-btn {
@@ -221,9 +116,22 @@ input[type=text]:focus {
   border-radius: 3px;
 }
 
-.search-box:hover {
+
+.search-icon {
+  color: #605e5e;
+  position: absolute;
+  left: 3px;
+  align-self: center;
+}
+
+.search-box:focus {
   background-color: #fff;
 }
+
+.search-box:focus .search-icon {
+  color:black;
+}
+
 
 /* Listing of all the restaurants */
 .content-div {
@@ -246,6 +154,7 @@ input[type=text]:focus {
   grid-gap: 0.9em;
   margin-right: 5%;
   margin-left: 5%;
+  height: calc(100vh - 50px);
 }
 
 
@@ -257,7 +166,7 @@ input[type=text]:focus {
 
 .restaurant-info {
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   border: solid 2px #eee;
   border-radius: 5px;
   padding: 1em;
@@ -339,6 +248,13 @@ a {
   text-decoration: none;
 }
 
+.view-details-div {
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #ab14ab;
+  padding: 1em;
+  text-align: center;
+}
 
 /* Filter Restaurant related */
 .filter-restaurants {
@@ -441,4 +357,9 @@ a {
 
 .category-div {
   padding: 1em;
+}
+
+.back-arrow {
+  color: #fff;
+  padding: 0.7em;
 }
