--- a/src/css/style.css
+++ b/src/css/style.css
@@ -188,7 +188,7 @@ input[type=text] {
   grid-template-columns: 1fr 3fr;
   grid-gap: 10px;
   /*border-bottom: solid 1px #ddd;*/
-  /*padding: 1em;*/
+  padding: 1em;
 }
 
 .logo {
