--- a/src/css/style.css
+++ b/src/css/style.css
@@ -215,6 +215,9 @@ input[type=text] {
   text-transform: capitalize;
 }
 
+.underline-div:hover {
+  text-decoration: underline;
+}
 
 .details-title {
   text-transform: uppercase;
