Mobile view fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,7 +13,7 @@ html {
   font-family: 'Roboto', sans-serif;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   html {
     font-size: 10px;
   }
@@ -21,8 +21,8 @@ html {
 
 .container {
   display: grid;
-  grid-template-columns: 1;
-  grid-template-rows: 50px auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: 50px calc(100vh - 50px);
 }
 
 .header {
@@ -30,22 +30,10 @@ html {
   background-color: #ab14ab;
   color: #fff;
 
-  grid-template-columns: 5fr 1fr
-    /* repeat(6, 1fr) */
-  ;
+  grid-template-columns:1fr;
   padding: 1em;
 }
 
-.footer {
-  background-color: #ab14ab;
-  z-index: 1;
-}
-
-.content {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  height: calc(100vh - 70px);
-}
 
 /* title of the application related */
 .title {
@@ -82,7 +70,7 @@ input[type=text] {
 	background-repeat: no-repeat;
 	display: grid;
 
-	height: calc(100vh - 50px);
+	/* height: calc(100vh - 50px); */
 	align-items: end;
 	justify-items: center;
 }
@@ -136,14 +124,16 @@ input[type=text] {
 /* Listing of all the restaurants */
 .content-div {
   display: grid;
-  grid-template-rows: 50px auto;
+  grid-template-rows: 50px calc(100vh - 100px);
   background-color: #fff2ff;
+  overflow-y: hidden;
 }
 
 .content-div-search-bar {
   display: grid;
   align-items: center;
   justify-items: center;
+  padding: 5px;
 }
 
 .restaurants-list {
@@ -154,13 +144,14 @@ input[type=text] {
   grid-gap: 0.9em;
   margin-right: 5%;
   margin-left: 5%;
-  height: calc(100vh - 50px);
+  /* height: calc(100vh - 50px); */
 }
 
 
 .all-restaurants {
-  display: grid;
-  grid-template-columns: 1fr;
+  /* display: grid; */
+  /* grid-template-columns: 1fr; */
+  overflow-y: auto;
 }
 
 
@@ -267,6 +258,7 @@ a {
   background-color: #fff;
   border: solid 1px #ddd;
   border-radius: 5px;
+  overflow-y: auto;
 }
 
 .filter-info {
@@ -379,18 +371,40 @@ a {
   justify-self: center;
 }
 
+/* scroll bar related */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 8px;
+}
+
 
 /* media queries */
-@media screen and (max-width: 500px){
+@media screen and (max-width: 500px) {
+
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 30px calc(100vh - 30px);
+  }
+
+  .content-div {
+    display: grid;
+    grid-template-rows: 50px calc(100vh - 100px) 20px;
+    background-color: #fff2ff;
+    overflow-y: hidden;
+  }
+
   .restaurants-list { 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto 50px;
-    padding: 1em;
-    grid-gap: 0.9em;
-    margin-right: 2%;
-    margin-left: 2%;
-    height: calc(100vh - 50px);
+  }
+  
+  .category-div {
+    padding: 1.2em;
   }
 
   .footer {
@@ -400,6 +414,16 @@ a {
     align-items: center;
     justify-items: center;
     display: grid;
+    text-transform: uppercase;
+    position: relative;
+  }
+
+  .filter-panel {
+    position: absolute;
+    bottom: 31px;
+    z-index: 2;
+    width: 100%;
+    /* height: calc(100vh - 62px); */
   }
   
 }
