UI style improvement

--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -12,6 +12,7 @@
   --font-family: 'Roboto', sans-serif;
 
   --font-weight-regular: 300;
+  --font-weight-dark: 700;
  
   --darker-grey: #605e5e;
   --dark-grey: #ddd;
